# finance

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  Makefile  README.md  expense_insight.py  go.mod  go.sum  insert.py  pyproject.toml  seed.py
cmd/cli/: main.go
data/: expense.parquet  investment.parquet
finance/: __init__.py  crud.py
go/: go.mod  go.sum
go/cmd/cli/: main.go
go/config/: config.go  config.yml
go/pkg/entity/notion/: finance.go
go/pkg/registry/: registry.go
go/pkg/repository/: expense.go  income.go
pkg/entity/: expense.go  income.go
pkg/entity/notion/: finance.go
pkg/repository/: expense.go
pkg/util/pointer/: pointer.go
rust/: Cargo.toml
rust/src/: main.rs
web/: server.py
web/static/: index.html
